상품등록해야함

--- a/src/main/resources/templates/admin/adminDefault.html
+++ b/src/main/resources/templates/admin/adminDefault.html
@@ -84,7 +84,7 @@
                         <a href="/admin/board/list"> <i class="menu-icon fa fa-pen-square"></i>게시판관리 </a>
                     </li>
                     <li>
-                        <a href="/admin/vs/list"> <i class="menu-icon fa fa-comments"></i>문의관리 </a>
+                        <a href="/admin/contact/list"> <i class="menu-icon fa fa-comments"></i>문의관리 </a>
                     </li>
                     <li>
                         <a href="/admin/priceInfo/list"> <i class="menu-icon fa fa-info-circle"></i>난가정보관리 </a>
