--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -10,8 +10,8 @@
                 <h2 class="h4 text-white">공지사항</h2>
                 <p class="text-white">코리아에그의 공지 및 계란소식을 전해드립니다</p>
             </div>
-            <a class="btn btn-sm btn-primary btn-wide" href="/boardList">공지사항</a>
-            <a class="btn btn-sm btn-dark btn-wide" href="/contactUsList">1:1문의</a>
+            <a class="btn btn-sm btn-primary btn-wide" href="/board/list">공지사항</a>
+            <a class="btn btn-sm btn-dark btn-wide" href="/contact/list">1:1문의</a>
         </div>
         <!-- End CTA -->
 
@@ -29,7 +29,7 @@
                         <div class="col-sm-1 d-none d-sm-block"><span th:text="${board.boardName}" class="text-danger">공지</span></div>
                         <div class="col-12 col-sm-8 text-left">
                             <span th:text="${board.boardName}" class="badge badge-primary d-block d-sm-none"></span>
-                            <a th:href="@{/board(id=${board.id})}"><span th:text="${board.title}" ></span></a>
+                            <a th:href="@{/templates/board(id=${board.id})}"><span th:text="${board.title}" ></span></a>
                             <span th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="d-block d-sm-none"></span>
                         </div>
                         <div th:text="${#dates.format(board.regDate, 'yyyy.MM.dd')}" class="col-sm-2 d-none d-sm-block">2016.05.01</div>
@@ -39,7 +39,7 @@
             <!--END 전체난가정보-->
             <div class="row">
                 <div class="col-md-3 col-md-offset-3">
-                    <a role="button" class="btn btn-sm btn-primary btn-wide text-white" href="/board?register">글등록</a>
+                    <a role="button" class="btn btn-sm btn-primary btn-wide text-white" th:href="@{register}">글등록</a>
                 </div>
             </div>
         </div>
