--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -106,7 +106,7 @@
                                 <!-- End Works -->
                                 <!-- Blog -->
                                 <li class="nav-item u-header__nav-item">
-                                    <a class="nav-link u-header__nav-link" href="/boardList">
+                                    <a class="nav-link u-header__nav-link" href="/board/list">
                                         게시판
                                     </a>
                                 </li>
