상품등록해야함

--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -11,6 +11,7 @@
                 <p class="text-white">코리아에그의 공지 및 계란소식을 전해드립니다</p>
             </div>
             <a class="btn btn-sm btn-primary btn-wide" href="/board/list">공지사항</a>
+            <!-- TODO 1:1문의는 로그인 한사람만 가능해야함?ㅠㅠ-->
             <a class="btn btn-sm btn-dark btn-wide" href="/contact/list">1:1문의</a>
         </div>
         <!-- End CTA -->
