--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -99,7 +99,7 @@
                                     <a sec:authorize="!hasAuthority('CAST_READ')" class="nav-link u-header__nav-link text-warning" href="javascript:alert('권한이없습니다')">
                                         난가정보
                                     </a>
-                                    <a sec:authorize="hasAuthority('CAST_READ')" class="nav-link u-header__nav-link" href="/priceInfo">
+                                    <a sec:authorize="hasAuthority('CAST_READ')" class="nav-link u-header__nav-link" href="/priceInfo/list">
                                         난가정보
                                     </a>
                                 </li>
